# wall-finishing-robot

./: .gitignore  LICENSE  README.md  config.template.toml  config.toml  main.py  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: ci.yml
src/: app.py
src/api/v1/: router.py  trajectories.py
src/config/: config.template.toml  config.toml  loader.py  schemas.py
src/models/: trajectory.py
src/schemas/: trajectory.py
src/services/: path_planning.py
src/static/: index.html  script.js  styles.css
tests/: conftest.py  test_api.py
