[project]
name = "wall-finishing-robot"
version = "1.0.0"
description = "FastAPI-based API for autonomous wall-finishing robot trajectory generation and management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "sqlmodel>=0.0.24",
    "numpy>=2.3.2",
    "loguru>=0.7.3",
    "pydantic-settings>=2.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "httpx>=0.28.1",
    "ruff>=0.12.5",
    "mypy>=1.17.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
    "httpx>=0.28.1",
    "ruff>=0.12.5",
    "mypy>=1.17.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.1",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
